fix gh actions issue, add tests, fix swagger
